--- a/index.html
+++ b/index.html
@@ -52,8 +52,31 @@
     margin: 20px;
   }
   .beta2{
-    border: 1px solid red;
+  
     width: 70%;
+  }
+  .i{
+    height: 20px;
+    background-color: grey;
+    padding: 20px;
+    margin: 20px;
+  }
+  .img{
+    height: 200px;
+    background-color: grey;
+    margin: 20px;
+    
+
+  }
+  .txt{
+    padding: 20px;
+  }
+  footer{
+    height: 50px;
+    background-color: grey;
+    text-align: center;
+    font-size: 35px;
+    padding-top: 25px;
   }
 
   </style>
@@ -82,19 +105,33 @@
     <div class="image1">
       image
     </div>
-    <span>
+    <span >
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque similique aperiam cumque laudantium delectus eum maxime at laborum, nam vel modi! Fugiat id ipsum ullam ratione eum dolor cumque reiciendis.
     </span>
     <h1 style="padding: 20px;">More text</h1>
     <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</span>
-
+    <div class="i">image</div>
+    <div class="i">image</div>
+    <div class="i">image</div>
   </aside>
   <main class="beta2">
     <h1 class="about"  style="padding: 20px;">Title Heading</h1>
     <span class="span"  style="padding: 20px;">Title description, Dec 10,2025</span>
-  </main>
+    <div class="img">image</div>
+    <span style="padding: 20px;">Some text..</span>
+    <div class="txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, unde animi. Facere aut sed totam necessitatibus obcaecati repellendus tempora, mollitia, ut quia tempore officia inventore voluptatem? Sint quas beatae sapiente. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, numquam! </div>
 
+    <h1 class="about"  style="padding: 20px;">Title Heading</h1>
+    <span class="span"  style="padding: 20px;">Title description, Dec 10,2025</span>
+    <div class="img">image</div>
+    <span style="padding: 20px;">Some text..</span>
+    <div class="txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, unde animi. Facere aut sed totam necessitatibus obcaecati repellendus tempora, mollitia, ut quia tempore officia inventore voluptatem? Sint quas beatae sapiente. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, numquam! </div>
+   
+  </main>
 </div>
+ <footer>
+  <div class="footer">Footer</div>
+ </footer>
  
 </body>
 </html>
