--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Document</title>
   <style>
     *{
+      
       padding: 0px;
       margin: 0px;
       
@@ -78,6 +79,22 @@
     font-size: 35px;
     padding-top: 25px;
   }
+  .txt_center{
+    text-align: justify;
+    padding: 20px;
+  }
+  @media screen and (max-width:750px) {
+  .nav2 ul{
+  display: block;
+   }
+   .nav2 ul li{
+   text-align: center; 
+  }
+  @media screen and (max-width:874px){
+    .papa{display: block;}
+    .beta1{width: 100%;}
+    .beta2{width:100%;}
+  }
 
   </style>
 </head>
@@ -105,11 +122,11 @@
     <div class="image1">
       image
     </div>
-    <span >
+    <div class="txt_center">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque similique aperiam cumque laudantium delectus eum maxime at laborum, nam vel modi! Fugiat id ipsum ullam ratione eum dolor cumque reiciendis.
-    </span>
+    </div>
     <h1 style="padding: 20px;">More text</h1>
-    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</span>
+    <div class="txt_center">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</div>
     <div class="i">image</div>
     <div class="i">image</div>
     <div class="i">image</div>
