--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   display: block;
    }
    .nav2 ul li{
-   text-align: center; 
+   text-align: center; }
   }
   @media screen and (max-width:874px){
     .papa{display: block;}
